synthetic sugar deleted